--- a/web/portal/src/main/resources/locale/portal/webui_en.properties
+++ b/web/portal/src/main/resources/locale/portal/webui_en.properties
@@ -326,7 +326,7 @@ UILoginForm.label.mobile.copyright.RH=Red Hat, Inc
 UILoginForm.label.mobile.copyright.And=and
 UILoginForm.label.mobile.copyright.Exo=eXo Platform SAS
 
-UILoginForm.label.mobile.login.oauth.Delimiter=or sign in with
+UILoginForm.label.mobile.login.oauth.Delimiter=OR sign in with
 
 UILoginForm.label.mobile.login.Close=close
 
@@ -1039,6 +1039,7 @@ UIRegisterForm.action.Subscribe=Subscribe
 UIRegisterForm.action.Reset=Reset
 UIRegisterForm.action.Cancel=Cancel
 UIRegisterForm.action.SubscribeOAuth=Subscribe and Login
+UIRegisterForm.message.signUpOnFlyError=Failure to create your account automatically. Please fill your infos and complete the registration
 
 UIRegisterForm.label.username=User Name:
 UIRegisterForm.label.password=Password:
@@ -1312,7 +1313,8 @@ UIAccountSocial.msg.failed-registration=User registration failed. UserName "{0}"
 UIAccountSocial.msg.failed-revoke=Revocation of access token failed. Maybe your access token has been already revoked before.
 UIAccountSocial.msg.access-denied=Operation failed due to denied access
 UIAccountSocial.msg.oauth-error=Unspecified error during oauth flow
-
+UIAccountSocial.msg.not-in-oauth-process=You are not in a Oauth process. This portlet only for register new account via social network.
+UIOAuthInvitationForm.title=Existing Account Detected
   ################################################################################
   #		 UIAccountSettings #
   ################################################################################
@@ -1553,6 +1555,16 @@ UIUserToolBarDashboard.page.Tab_Default=Click & Type Page Name
 UIConfirmation.title.exoMessages=Confirm message
 UIConfirmation.Close=#{word.close}
 
+
+############################################################################
+#   	org.exoplatform.portal.webui.register.UIOAuthInvitationForm          #
+############################################################################
+UIOAuthInvitationForm.message.detectedUser=We have detected that an eXo account already exists for
+UIOAuthInvitationForm.message.inviteMessage=If you would like to use it, please enter your eXo password to confirm
+UIOAuthInvitationForm.label.password=eXo Password:
+UIOAuthInvitationForm.message.loginFailure=Wrong password, please try again!
+UIOAuthInvitationForm.message.userDisabled=This user is disabled
+UIOAuthInvitationForm.message.loginUnknowException=There is error while check your password. Please try again.
 
  ### Locales
 Locale.zh_CN=Simplified Chinese
